Fix: homepage link color for Dark mode/Light Mode

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -195,7 +195,7 @@ footer {
         line-height: normal;
         margin: 0;
         a {
-            color: #dadada;
+            color: #000;
             cursor: pointer;
             font-weight: 700;
             &:hover {
